Add windows executable generation