@@ -71,6 +71,78 @@
               </execution>
             </executions>
           </plugin>
+
+
+          <plugin>
+	<groupId>com.akathist.maven.plugins.launch4j</groupId>
+	<artifactId>launch4j-maven-plugin</artifactId>
+	<version>1.7.16</version>
+	<executions>
+		<execution>
+			<id>l4j-clui</id>
+			<phase>package</phase>
+			<goals><goal>launch4j</goal></goals>
+			<configuration>
+				<headerType>console</headerType>
+				<outfile>target/${project.name}.exe</outfile>
+				<jar>target/script2layout-1.0.2-SNAPSHOT-jar-with-dependencies.jar</jar>
+				<errTitle>encc</errTitle>
+				<classPath>
+          <mainClass>de.drewing.comic.layout.Script2Layout</mainClass>
+					<addDependencies>true</addDependencies>
+					<preCp>anything</preCp>
+				</classPath>
+				<jre>
+					<minVersion>1.8.0</minVersion>
+          <jdkPreference>preferJre</jdkPreference>
+					<opts>
+						<opt>-Djava.endorsed.dirs=./endorsed</opt>
+					</opts>
+				</jre>
+        <icon>src/main/resources/icon/application.ico</icon>
+				<versionInfo>
+					<fileVersion>1.0.0.0</fileVersion>
+					<txtFileVersion>${project.version}</txtFileVersion>
+					<fileDescription>${project.name}</fileDescription>
+					<copyright>2018 drewing.de</copyright>
+					<productVersion>1.0.0.0</productVersion>
+					<txtProductVersion>1.0.0.0</txtProductVersion>
+					<productName>${project.name}</productName>
+					<originalFilename>${project.name}.exe</originalFilename>
+					<!-- internalName is mandatory -->
+					<internalName>${project.name}</internalName>
+				</versionInfo>
+			</configuration>
+		</execution>
+	</executions>
+</plugin>
+
+<plugin>
+	<artifactId>maven-resources-plugin</artifactId>
+	<version>3.0.0</version>
+	<executions>
+		<execution>
+			<id>deploy-to-local-directory</id>
+			<phase>install</phase>
+			<goals>
+				<goal>copy-resources</goal>
+			</goals>
+			<configuration>
+				<outputDirectory>${bin.local.path}</outputDirectory>
+				<resources>
+					<resource>
+						<directory>${project.build.directory}</directory>
+						<includes>
+							<include>*.exe</include>
+						</includes>
+						<filtering>false</filtering>
+					</resource>
+				</resources>
+			</configuration>
+		</execution>
+	</executions>
+</plugin>
+
     </plugins>
   </build>
 
